===v8.2.4===
 * Changed behavior of the On Combat Event notification trigger slightly to avoid occasional undesired timing issues (Ticket 1352).

===v8.2.3===
 * Improved behavior of exporting to other players.

 ===v8.2.2===
 * Packaging latest version of LibDogTag-Unit-3.0.

===v8.2.1===
 * You can now change bar textures on a per-group basis.
 * Added some missing currency definitions.

====Bug Fixes====
 * Fixed updating of class-specific resource conditions for non-player units.
 * On Start and On Finish notification triggers should no longer spaz out and trigger excessively.
 * Meta icons should now always use the correct unit when evaluating the DogTags used in their text displays.
 * Fixed meta icon rearranging.
 * Fixed tooltip number conditions for locales that use commas as their decimal separator.

===v8.2.0===
* New Icon Type: Guardians. Currently only implemented for Warlocks to track their Wild Imps/Dreadstalkers/etc.
* Support for Patch 7.1.

* New DogTag: MaxDuration
* Controlled icons can now be selected as a target of Meta icons and Icon Shown conditions.
* Cooldown sweeps that are displaying charges during a GCD when the GCD is allowed will now show the GCD.
* You can now flip the origin of progress bars to the right side of the icon.
* New Notification Triggers: On Charge Gained and On Charge Spent

====Bug Fixes====
* Fixed an issue that would cause unintentional renaming of text layouts. 
* Fixed an issue with text colors after a chat link in Raid Warning (Fake) text notification handlers.
* Fixed an issue with timer/status bars briefly showing their old value when they are first shown.
* Fixed a few bugs relating to improper handling of the icon type name of some variants of the totem icon type.
* Fixed an issue with Condition-triggered animations not being able to stop for non-icon-based animations.
* Fel Rush and Infernal Strike should now work with the Last Ability Used condition.