@@ -1283,6 +1283,8 @@ L["CONDITIONPANEL_ANDOR"] = "And / Or"
 L["CONDITIONPANEL_ANDOR_DESC"] = "|cff7fffffClick|r to toggle between logical operators AND and OR"
 L["CONDITIONPANEL_POWER"] = "Primary Resource"
 L["CONDITIONPANEL_PERCENT"] = "Percent"
+L["CONDITIONPANEL_PERCENTOFMAXHP"] = "Percent of Max Health"
+L["CONDITIONPANEL_PERCENTOFCURHP"] = "Percent of Current Health"
 L["CONDITIONPANEL_ABSOLUTE"] = "Current"
 L["CONDITIONPANEL_MAX"] = "Max"
 L["CONDITIONPANEL_COMBO"] = "Combo Points"
