@@ -1,5 +1,6 @@
 ===v8.2.4===
  * Changed behavior of the On Combat Event notification trigger slightly to avoid occasional undesired timing issues (Ticket 1352).
+ * Added conditions for Monks to check their stagger under the Resources condition category.
 
 ===v8.2.3===
  * Improved behavior of exporting to other players.
